--- a/anotacao.org
+++ b/anotacao.org
@@ -173,7 +173,7 @@ Esta obrigação de tratamento de dados visa "permitir que sejam apresentadas re
 
 *14. Divulgação das informações a terceiros (n.º 6)*. O fornecedor só pode divulgar as informações obtidas ao abrigo do n.º 1 e 2 a terceiros quando tal lhe seja exigido nos termos do Direito aplicável. O n.º 6 enuncia, sem limitar, que o fornecedor deve divulgar as informações quando tal lhe seja exigido no contexto de uma decisão do artigo 10.º do RSD ou de quaisquer decisões emitidas pelas autoridades competentes dos Estados-Membros ou pela Comissão para o desempenho das suas funções nos termos do presente regulamento.
 
-*15. Divulgação na plataforma das informações previstas no n.º 1, alíneas /a)/, /d)/ e /e)/* (n.º 7). As informações relativas ao nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante (n.º 1, alínea /a)/), ao registo comercial ou outro registo público equivalente, se o comerciante estiver inscrito (n.º 1, alínea /b)/) e à autocertificação (n.º 1, alínea /e)/) devem ser disponibilizadas aos destinatários de forma clara, facilmente acessível e compreensível e pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas.
+*15. Divulgação de informações na plataforma em linha (n.º 7)*. As informações relativas ao nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante (n.º 1, alínea /a)/), ao registo comercial ou outro registo público equivalente, se o comerciante estiver inscrito (n.º 1, alínea /b)/) e à autocertificação (n.º 1, alínea /e)/) devem ser disponibilizadas aos destinatários de forma clara, facilmente acessível e compreensível e pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas.
 
 *a) Divulgação de forma clara, facilmente acessível e compreensível*. A divulgação das informações deve ser efetuada de forma clara, facilmente acessível e compreensível. A informação é divulgada de forma clara se for facilmente identificável, procurando evitar-se ambiguidades e dúvidas interpretativas[cite:@muller-terpitz2023, art. 30.º, n.º 43]. A informação é divulgada de forma facilmente acessível se o destinatário do serviço consegue aceder à informação sem necessitar de pesquisar muito por ela[cite:@hofmann2023, art. 30.º, n.º 51], não devendo a interface em linha constituir um entrave ao acesso à informação[cite:Cf., no contexto do artigo 14.º, @knapp2024, p. 113]. Por fim, a informação é divulgada de forma compreensível se for for fácil de compreender para o destinatário do serviço. Atendendo a que norma visa, em primeira linha, a proteção dos consumidores, o critério pode ser a facilidade de compreensão para o consumidor médio[cite:@muller-terpitz2023, art. 30.º, n.º 44].
 
@@ -320,27 +320,27 @@ No contexto do artigo 32.º, em que o cumprimento da obrigação de informação
 
 *b) Dados de contacto dos consumidores adquirentes do produto ou serviço ilegal*. O artigo 32.º estabelece que o fornecedor só tem a obrigação de informar os consumidor se dispuser dos seus dados de contacto, mas não o obriga a ter e tratar esses dados de contacto para este propósito[cite:@wilman2024 32.º, n.º 3, consideram que o estabelecimento de tal obrigação violaria o artigo 6.º, n.º 1 do RGPD]. O conceito de dados de contacto, embora não definido no RSD, abrange o endereço de correio eletrónico, o endereço postal e o número de telefone do consumidor[fn:49].
 
-*7. Conteúdo*. O consumidor deve ser informado de que o produto ou serviço é ilegal (n.º 1, al. /a)/), da identidade do comerciante (n.º 1, al. /b)/) e de quaisquer meios de reparação aplicáveis (n.º 1, al. /c)/).
+*6. Conteúdo*. O consumidor deve ser informado de que o produto ou serviço é ilegal (n.º 1, al. /a)/), da identidade do comerciante (n.º 1, al. /b)/) e de quaisquer meios de reparação aplicáveis (n.º 1, al. /c)/).
 
-*a) O facto de o produto ou serviço ser ilegal (n.º 1, al. /a)/)*. Da redação da al. /a)/ não resulta o dever de informar os consumidor do motivo pelo qual o produto ou serviço é ilegal. Parece haver apenas o dever de comunicar que o produto ou serviço é ilegal[cite:@muller-terpitz2023, art. 32.º, n.º 11]. Alguns autores sustentam que o dever de indicar o fundamento da ilegalidade decorre, implicitamente, da obrigação de informar o consumidor de quaiquer meios de reparação aplicáveis[cite:@hofmann2023, art. 32.º, n.º 23].
+*a) O facto de o produto ou serviço ser ilegal*. Da redação da al. /a)/ não resulta o dever de informar os consumidor do motivo pelo qual o produto ou serviço é ilegal. Parece haver apenas o dever de comunicar que o produto ou serviço é ilegal[cite:@muller-terpitz2023, art. 32.º, n.º 11]. Alguns autores sustentam que o dever de indicar o fundamento da ilegalidade decorre, implicitamente, da obrigação de informar o consumidor de quaiquer meios de reparação aplicáveis[cite:@hofmann2023, art. 32.º, n.º 23].
 
-*b) Da identidade do comerciante*. O conceito de identidade não é definido no RSD. Alguns autores sustentam que o conceito de identidade, em regra, não abrangerá o endereço[cite:@hofmann2023, art. 32.º, n.º 25]. Outros reconduzem este conceito à informação que o fornecedor deve ter obtido do comerciante nos termos do art. 30.º, n.º 1, al. /a)/ do RSD[cite:@muller-terpitz2023, art. 32.º, n.º 11]. Este último entendimento parece preferível, atendendo ao objetivo de reforçar a proteção do consumidor e à relavância do endereço postal para o exercício judicial dos direitos do consumidor.
+*b) Identidade do comerciante*. O conceito de identidade não é definido no RSD. Alguns autores sustentam que o conceito de identidade, em regra, não abrangerá o endereço[cite:@hofmann2023, art. 32.º, n.º 25]. Outros reconduzem este conceito à informação que o fornecedor deve ter obtido do comerciante nos termos do art. 30.º, n.º 1, al. /a)/ do RSD[cite:@muller-terpitz2023, art. 32.º, n.º 11]. Este último entendimento parece preferível, atendendo ao objetivo de reforçar a proteção do consumidor e à relavância do endereço postal para o exercício judicial dos direitos do consumidor.
 
-*c) De quaisquer meios de reparação aplicáveis*. As versões inglesa, francesa, italiana, espanhola e alemã do RSD indicam, respetivamente, que o consumidor deve ser informado de /"any relevant means of redress/, /"tout moyen de recours pertinent"/, /"di qualsiasi mezzo di ricorso pertinente"/, /"de cualquier vía de recurso pertinente"/ e /"die einschlägigen Rechtsbehelfe"/. A análise das várias versões linguísticas aponta no sentido de que não é suficiente uma comunicação, de caráter geral, ao consumidor sobre os seus direitos. Parece ser necessário uma adequação da informação a prestar às circunstâncias do caso concreto, pois o consumidor deve ser informado dos meios de reparação /pertinentes/. O RSD não dá indicações sobre esta matéria. Parece dever procurar-se um equilíbrio entre o encargo imposto aos fornecedores, que não deverá ser excessivo, e o objetivo de reforçar, atrvés da prestação desta informação, a proteção dos consumidores. Assim, não devem ser indicados todos os direitos do consumidor, pois os excesso de informação pode também dificultar o exercício dos seus direitos pelo consumidor, mas, por outro lado, o fornecedor não deverá ser onerado com a obrigação de efetuar uma delimitação precisa dos meios de reparação aplicáveis. Devem ser indicados os meios de reparação que, em princípio, podem ser aplicáveis ao caso concreto[cite:@hofmann2023, art. 32.º, n.º 26;@muller-terpitz2023, art. 32.º, n.º 12].
+*c) Quaisquer meios de reparação aplicáveis*. As versões inglesa, francesa, italiana, espanhola e alemã do RSD indicam, respetivamente, que o consumidor deve ser informado de /"any relevant means of redress/, /"tout moyen de recours pertinent"/, /"di qualsiasi mezzo di ricorso pertinente"/, /"de cualquier vía de recurso pertinente"/ e /"die einschlägigen Rechtsbehelfe"/. A análise das várias versões linguísticas aponta no sentido de que não é suficiente uma comunicação, de caráter geral, ao consumidor sobre os seus direitos. Parece ser necessário uma adequação da informação a prestar às circunstâncias do caso concreto, pois o consumidor deve ser informado dos meios de reparação /pertinentes/. O RSD não dá indicações sobre esta matéria. Parece dever procurar-se um equilíbrio entre o encargo imposto aos fornecedores, que não deverá ser excessivo, e o objetivo de reforçar, atrvés da prestação desta informação, a proteção dos consumidores. Assim, não devem ser indicados todos os direitos do consumidor, pois os excesso de informação pode também dificultar o exercício dos seus direitos pelo consumidor, mas, por outro lado, o fornecedor não deverá ser onerado com a obrigação de efetuar uma delimitação precisa dos meios de reparação aplicáveis. Devem ser indicados os meios de reparação que, em princípio, podem ser aplicáveis ao caso concreto[cite:@hofmann2023, art. 32.º, n.º 26;@muller-terpitz2023, art. 32.º, n.º 12].
 
-*8. Modos de prestação*. Não é definido como deve o fornecedor comunicar a informação aos consumidores. Regra geral, admite-se que a solução mais comum será o envio da informação através de mensagem para o endereço de correio eletrónico do consumidor. A informação pode também ser prestada mediante envio de carta para o endereço postal do consumidor. A prestação da informação ao consumidor mediante contacto telefónico não parece adequada, desde logo pela quantidade de informação a prestação, pelos maiores encargos que acarreta para o fornecedor[cite:@muller-terpitz2023, art. 32.º, n.º 13] e por não consubstanciar um registo duradouro que permita consultas repetidas pelo consumidor. Pparece, no entanto, possível - embora não tão comum como o envio de mensagens por correio eletrónico - o envio da informação através de aplicações de troca de mensagens que utilizem o contacto telefónico para identificar os seus utilizadores (/v.g. Whatsapp/).
+*7. Modos de prestação*. Não é definido como deve o fornecedor comunicar a informação aos consumidores. Regra geral, admite-se que a solução mais comum será o envio da informação através de mensagem para o endereço de correio eletrónico do consumidor. A informação pode também ser prestada mediante envio de carta para o endereço postal do consumidor. A prestação da informação ao consumidor mediante contacto telefónico não parece adequada, desde logo pela quantidade de informação a prestação, pelos maiores encargos que acarreta para o fornecedor[cite:@muller-terpitz2023, art. 32.º, n.º 13] e por não consubstanciar um registo duradouro que permita consultas repetidas pelo consumidor. Pparece, no entanto, possível - embora não tão comum como o envio de mensagens por correio eletrónico - o envio da informação através de aplicações de troca de mensagens que utilizem o contacto telefónico para identificar os seus utilizadores (/v.g. Whatsapp/).
 
 Em contraponto, a prestação da informação através da própria plataforma em linha - mesmo quando esta tenha um sistema interno de troca de mensagens - não parece poder incluir-se no conceito de dados de contacto, pois normalmente pressupõe que o consumidor tem de aceder à plataforma em linha para verificar as mensagens[cite:Cf., em sentido semelhante, @muller-terpitz2023, art. 32.º, n.º 13].
 
 *** V - Obrigação de divulgação (n.º 2)
 
-*9. Pressupostos*. Para que o fornecedor tenha a obrigação de divulgação é necessário que tome conhecimento de um produto ou serviço ilegal foi oferecido por um comerciante a consumidores localizados na União Europeia através da sua plataforma em linha, adquirido por estes durante os seis meses que precederam o momento em que tomou conhecimento da ilegalidade, e que não disponha dos dados de contacto de todos os consumidores em causa. Em suma, a obrigação de divulgação (n.º 2) é aplicável nos casos em que, por qualquer motivo, o fornecedor não dispõe dos dados de contacto de /todos/ os consumidores localizados na União Europeia que, naquele prazo de 6 meses, adquiriram o produto ou serviço ilegal.
+*8. Pressupostos*. Para que o fornecedor tenha a obrigação de divulgação é necessário que tome conhecimento de um produto ou serviço ilegal foi oferecido por um comerciante a consumidores localizados na União Europeia através da sua plataforma em linha, adquirido por estes durante os seis meses que precederam o momento em que tomou conhecimento da ilegalidade, e que não disponha dos dados de contacto de todos os consumidores em causa. Em suma, a obrigação de divulgação (n.º 2) é aplicável nos casos em que, por qualquer motivo, o fornecedor não dispõe dos dados de contacto de /todos/ os consumidores localizados na União Europeia que, naquele prazo de 6 meses, adquiriram o produto ou serviço ilegal.
 
 A obrigação de divulgação (n.º 2) substitui a obrigação de informação (n.º 1), nos casos em que o fornecedor não disponha dos dados de contacto de nenhum dos consumidores adquirentes. Pode, no entanto, questionar-se se o mesmo sucede nos casos em que o fornecedor dispõe dos dados de contacto de alguns, mas não de todos os consumidores adquirentes. Ou se, neste caso, o fornecedor está obrigado a informar diretamente os consumidores adquirente cujos meios de contacto dispõe (n.º 1) e a cumprir a obrigação de divulgação (n.º 2), pois não tem possibilidade de informar diretamente os restantes consumidores adquirentes. Atendendo ao objetivo de proteção do consumidores, e ao facto de a obrigação de divulgação não garantir o conhecimento por parte dos consumidores adquirentes (uma vez que estes têm de se dirigir à plataforma em linha para consultarem a informação), entende-se que, nos casos em que o forneceder só disponha dos dados de contacto de parte dos consumidores adquirentes, ele deve cumprir a obrigação de informação quanto a estes e também a obrigação de divulgação constante do n.º 2.
 
-*10. Conteúdo*. A obrigação de divulgação abrange as informações sobre o produto ou serviço ilegal, a identidade do comerciante e quaisquer meios de reparação aplicáveis. A expressão "informações sobre o produto ou serviço ilegal" parece ser mais abrangente do que a prevista no n.º 1, al. /a)/. Tal pode compreender-se porque, neste caso, o fornecedor não pode contactar diretamente todos os consumidores que adquiriram o produto ou serviço ilegal e, por isso, deve divulgar informações que permitam aos consumidores identificar inequivocamente se adquiriram ou não aquele produto ou serviço ilegal. Assim, inclui-se, por exemplo, a designação, modelo, n.º de série, descrição e imagens do produto ilegal[cite:@muller-terpitz2023, art. 32.º, n.º 16]. As informações relativas à identidade do comerciante e aos meios de reparação correspondem às previstas no n.º 1, als. /b)/ e /c)/ (cf. /supra/ *IV.5.b) e c)*).
+*9. Conteúdo*. A obrigação de divulgação abrange as informações sobre o produto ou serviço ilegal, a identidade do comerciante e quaisquer meios de reparação aplicáveis. A expressão "informações sobre o produto ou serviço ilegal" parece ser mais abrangente do que a prevista no n.º 1, al. /a)/. Tal pode compreender-se porque, neste caso, o fornecedor não pode contactar diretamente todos os consumidores que adquiriram o produto ou serviço ilegal e, por isso, deve divulgar informações que permitam aos consumidores identificar inequivocamente se adquiriram ou não aquele produto ou serviço ilegal. Assim, inclui-se, por exemplo, a designação, modelo, n.º de série, descrição e imagens do produto ilegal[cite:@muller-terpitz2023, art. 32.º, n.º 16]. As informações relativas à identidade do comerciante e aos meios de reparação correspondem às previstas no n.º 1, als. /b)/ e /c)/ (cf. /supra/ *IV.5.b) e c)*).
 
-*11. Modo de divulgação*. A informação tem de ser disponibilizada ao público, de modo facilmente acessível, na interface em linha da plataforma em linha do fornecedor. O requisito de disponibilização ao público é preenchido desde que a informação seja colocada em local da plataforma em linha que possa ser acedido por qualquer internauta, mesmo que não tenha conta na plataforma em linha (ou não acedido a esta)[cite:@hofmann2023, art. 32.º, n.º 32;@muller-terpitz2023, art. 32.º, n.º 18]. As informações são facilmente acessíveis se o público consegue aceder à informação sem necessitar de pesquisar muito por ela[cite:@muller-terpitz2023, art. 32.º, n.º 19], não devendo a interface em linha constituir um entrave ao acesso à informação[cite:Cf., no contexto do artigo 14.º, @knapp2024, p. 113]. Um modo de o alcançar será, por exemplo, criar uma secção específica na interface em linha da plataforma em linha, acessível desde logo na página de entrada da plataforma, para a divulgação destas informações[cite:@hofmann2023, art. 32.º, n.º 32].
+*10. Modo de divulgação*. A informação tem de ser disponibilizada ao público, de modo facilmente acessível, na interface em linha da plataforma em linha do fornecedor. O requisito de disponibilização ao público é preenchido desde que a informação seja colocada em local da plataforma em linha que possa ser acedido por qualquer internauta, mesmo que não tenha conta na plataforma em linha (ou não acedido a esta)[cite:@hofmann2023, art. 32.º, n.º 32;@muller-terpitz2023, art. 32.º, n.º 18]. As informações são facilmente acessíveis se o público consegue aceder à informação sem necessitar de pesquisar muito por ela[cite:@muller-terpitz2023, art. 32.º, n.º 19], não devendo a interface em linha constituir um entrave ao acesso à informação[cite:Cf., no contexto do artigo 14.º, @knapp2024, p. 113]. Um modo de o alcançar será, por exemplo, criar uma secção específica na interface em linha da plataforma em linha, acessível desde logo na página de entrada da plataforma, para a divulgação destas informações[cite:@hofmann2023, art. 32.º, n.º 32].
 
 
 * Footnotes
